Removed padding property that was causing alignment issues and changed width on 'null' and 'trash' columns

--- a/cdap-ui/app/features/hydratorplusplus/bottompanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/bottompanel.less
@@ -297,9 +297,6 @@ body.theme-cdap.state-hydratorplusplus {
         border: 0;
         padding: 0;
 
-        @media (min-width: @screen-lg-min) {
-          padding-left: 10px;
-        }
         label {
           margin-bottom: 0;
           vertical-align: top;
@@ -324,10 +321,10 @@ body.theme-cdap.state-hydratorplusplus {
 
         }
         &.nullable {
-          width: 8%;
+          width: 35px;
         }
         &.trash {
-          width: 8%;
+          width: 35px;
           a {
             padding-left: 0;
             padding-right: 0;
